deployment/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: sample
        image: nexweb1/sample:test
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
