deployment/openshift-pod-template.yaml
apiVersion: v1
kind: Pod
spec:
  containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
    - name: maven
      image: maven:3.8.1-jdk-8
      imagePullPolicy: Always # use cache or pull image for agent
      command:
        - sleep
      args:
        - 99d
      volumeMounts:
        - name: maven-repo-vol
          mountPath: /root/.m2         
    - name: kaniko
      image: gcr.io/kaniko-project/executor:debug
      imagePullPolicy: Always
      command:
        - sleep
      args:
        - 99d
      tty: true
      volumeMounts:
        - name: kaniko-secret
          mountPath: /kaniko/.docker
    - name: openshift-cli
      image: docker.io/nexweb1/cli:latest
      imagePullPolicy: Always
      command:
        - sleep
      args:
        - 99d
      tty: true              
  volumes:
    - name: kaniko-secret
      secret:
        secretName: docker-credentials
        items:
          - key: .dockerconfigjson
            path: config.json   
    - name: maven-repo-vol
      hostPath:
        path: /root/.m2
