deployment/pod-template.yaml
apiVersion: v1
kind: Pod
spec:
  containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
  
    - name: maven
      image: maven:alpine
      command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
      imagePullPolicy: Always # use cache or pull image for agen
      volumeMounts:
        - name: maven-repo-vol
          mountPath: /root/.m2
    - name: git
      image: alpine/git
      imagePullPolicy: Always 
      command: ["tail", "-f", "/dev/null"] 
      tty: true
    - name: kubectl
      image: lachlanevenson/k8s-kubectl
      imagePullPolicy: Always     
      command: ["cat"]
      tty: true
    - name: scanner
      image: newtmitch/sonar-scanner
      imagePullPolicy: Always
      command: ["cat"]
      tty: true   
    - name: buildah
      image: quay.io/buildah/stable
      command:
      - cat
      tty: true
      securityContext:
        privileged: true
      volumeMounts:
      - name: varlibcontainers
        mountPath: /var/lib/containers
      - name: docker-credentials
        mountPath: /tekton/home/.docker        
    - name: kaniko
      image: gcr.io/kaniko-project/executor:debug
      imagePullPolicy: Always
      command: ["cat"]
      tty: true
      volumeMounts:
        - name: docker-credentials
          mountPath: /kaniko/.docker 

  volumes:
    - name: varlibcontainers
      emptyDir: {}
    - name: docker-credentials
      secret:
        secretName: docker-credentials
        items:
          - key: .dockerconfigjson
            path: config.json    
    - name: maven-repo-vol
      hostPath:
        path: /root/.m2
