deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user00-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "user00.169.56.100.104.nip.io"
    http:
      paths:
      - path: /user00
        pathType: Prefix
        backend:
          service:
            name: sample
            port:
              number: 8080
